--- a/work-design.html
+++ b/work-design.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimi的個人網站-設計</title>
-     <!-- css -->
+    <!-- css -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/work.css" />
     <!-- 字體 -->
@@ -28,17 +28,21 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@700&family=Noto+Sans+TC:wght@100;800&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <!--設計-->
   <body>
     <!--導覽列-->
-     <!--手機-->
-     <ul class="nav-list-phone">
-      <li class="nav-item-phone"><a class="nav-link" href="/index.html">回首頁</a></li>
-      <li class="nav-item-phone"><a class="nav-link" href="#work">其他作品</a></li>
-     </ul>
-     <!--電腦-->
+    <!--手機-->
+    <ul class="nav-list-phone">
+      <li class="nav-item-phone">
+        <a class="nav-link" href="/index.html">回首頁</a>
+      </li>
+      <li class="nav-item-phone">
+        <a class="nav-link" href="#work">其他作品</a>
+      </li>
+    </ul>
+    <!--電腦-->
     <section class="nav-outside">
       <nav class="navbar">
         <a class="nav-logo" href="/index.html">
@@ -48,30 +52,35 @@
           <span>Mimi Jou</span>
         </a>
         <div class="nav-list-box">
-          <li class="nav-item"><a class="nav-link" href="/index.html">回首頁</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">回首頁</a>
+          </li>
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="#work">其他作品</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#work">其他作品</a>
+            </li>
           </ul>
         </div>
-         <!--隱藏選單-->
-      <button type="button" class="nav-list-btn">
-        <img class="nav-list-img"src="./img/三.png" alt="btn"/>
-      </button>
+        <!--隱藏選單-->
+        <button type="button" class="nav-list-btn">
+          <img class="nav-list-img" src="./img/三.png" alt="btn" />
+        </button>
       </nav>
     </section>
     <!--作品-->
     <section class="draw">
       <!-- 標題 -->
-      <div class="draw-title"
-      data-aos="fade-up" 
-      data-aos-duration="2000" >
+      <div class="draw-title" data-aos="fade-up" data-aos-duration="2000">
         <h1>設　計</h1>
         <img src="../img/底線.png" />
       </div>
       <!-- 設計1 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" >
+      <div
+        class="draw-board"
+        data-aos="fade-up"
+        data-aos-duration="2000"
+        data-aos-delay="300"
+      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -79,10 +88,10 @@
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>行銷活動</h1>
+          <h1>廣告設計</h1>
           <p>
-            負責發想slogan與視覺提案，進行主視覺延伸設計，
-          </br>協助規範KOL拍攝素材，製作宣傳貼文、剪輯廣告等。</p>
+            發想slogan、視覺提案，主視覺延伸設計，行銷活動專案設計與一般促銷廣告、banner排版。
+          </p>
           <!-- 按鈕 -->
           <a
             target="_blank"
@@ -93,9 +102,7 @@
         </div>
       </div>
       <!-- 設計2 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000"  >
+      <div class="draw-board" data-aos="fade-up" data-aos-duration="2000">
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -105,8 +112,7 @@
         <div class="draw-content">
           <h1>社群貼文</h1>
           <p>
-            製作貼文並繪製插圖，以時事、節慶融合促銷項目，
-          </br>發想文字內容、slogan及版面規劃。
+            負責貼文版面規劃、排版設計，文案撰寫與插圖繪製。依據時事與公司規範進行發想與設計。
           </p>
           <!-- 按鈕 -->
           <a
@@ -118,47 +124,53 @@
         </div>
       </div>
     </section>
-         <!--作品選項-->
-         <section id="work" class="work"
-         data-aos="fade-up" 
-      data-aos-duration="2000" 
-      data-aos-once="false">
-          <div class="work-title">
-            <h1>作品集</h1>
-            <img src="../img/底線.png" />
-          </div>
-          <div class="work-item">
-            <div class="item-box">
-              <a  href="./work-draw.html" class="work-draw"></a>
-              <p>插畫</p>
-            </div>
-            <div class="item-box">
-              <a  href="./work-design.html" class="work-design"></a>
-              <p>設計</p>
-            </div>
-            <div class="item-box">
-              <a  href="./work-vedio.html" class="work-vedio"></a>
-              <p>剪輯</p>
-            </div>
-            <div class="item-box">
-              <a  href="./work-UI.html" class="work-UI"></a>
-              <p>UI&UX</p>
-          </div>
-            </div>
-        </section> 
+    <!--作品選項-->
+    <section
+      id="work"
+      class="work"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      data-aos-once="false"
+    >
+      <div class="work-title">
+        <h1>作品集</h1>
+        <img src="../img/底線.png" />
+      </div>
+      <div class="work-item">
+        <div class="item-box">
+          <a href="./work-draw.html" class="work-draw"></a>
+          <p>插畫</p>
+        </div>
+        <div class="item-box">
+          <a href="./work-design.html" class="work-design"></a>
+          <p>設計</p>
+        </div>
+        <div class="item-box">
+          <a href="./work-vedio.html" class="work-vedio"></a>
+          <p>剪輯</p>
+        </div>
+        <div class="item-box">
+          <a href="./work-UI.html" class="work-UI"></a>
+          <p>UI&UX</p>
+        </div>
+      </div>
+    </section>
     <!--資訊-->
     <section class="lowest">
       <div class="information">
-         <div class="information-item">
-         <img src="../img/🦆 ig.png"/><p>ika_ink_</p>
-         </div>
-       <div class="information-item">
-         <img src="../img/🦆 map.png"/><p>台中市東區</p>
-       </div>
-         <div class="information-item">
-         <img src="../img/🦆 mail.png"/><p>oneyeen235@gmail.com</p>
-         </div>
-       </div>
+        <div class="information-item">
+          <img src="../img/🦆 ig.png" />
+          <p>ika_ink_</p>
+        </div>
+        <div class="information-item">
+          <img src="../img/🦆 map.png" />
+          <p>台中市東區</p>
+        </div>
+        <div class="information-item">
+          <img src="../img/🦆 mail.png" />
+          <p>oneyeen235@gmail.com</p>
+        </div>
+      </div>
     </section>
     <div class="overlay"></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
